--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     username: admin
     password: admin
   h2:
-    console:
+    console: 
       enabled: true
       path: /h2-console
   jpa:
@@ -16,3 +16,5 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+server:
+  port: 8080
